<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_menu_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_discussion"
            android:icon="@mipmap/ic_menu_discussion"
            android:title="@string/nav_dis" />
        <item
            android:id="@+id/nav_progress"
            android:icon="@mipmap/ic_menu_progress"
            android:title="@string/nav_progress" />
        <item
            android:id="@+id/nav_self_info"
            android:icon="@mipmap/ic_menu_self_info"
            android:title="@string/nav_self_info" />
    </group>

</menu>
