<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary" />
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="26dp"
                android:layout_marginTop="16dp"
                android:text="@string/login_title"
                android:textColor="@color/colorBangumiMain"
                android:layout_marginBottom="16dp"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">
                    <TextView
                        android:layout_weight="4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/login_email"
                        android:paddingRight="16dp"/>
                    <android.support.design.widget.TextInputEditText
                        android:layout_weight="6"
                        android:id="@+id/login_input_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_password"
                    android:paddingRight="22dp"/>
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_input_password"
                    android:layout_weight="6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login_captcha"
                    android:paddingRight="22dp"/>
                <android.support.design.widget.TextInputEditText
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:clickable="true"
                    android:id="@+id/login_input_captcha"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/login_captcha_view"
                        android:layout_width="80dp"
                        android:layout_height="30dp" />
                </LinearLayout>

            </LinearLayout>
            <Button
                android:id="@+id/login_input_submit"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:textColor="@color/colorBangumiMain"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>